Progress Bar Added

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">Multicamp Toplulukları - Türkiye</string>
     <string name="more_info">daha fazla bilgi</string>
     <string name="socialPlatform">Bizi Takip Ediyor Musun?</string>
+    <string name="loading">Yükleniyor, Lüften Bekleyin...</string>
 </resources>
